--- a/main.tex
+++ b/main.tex
@@ -49,15 +49,15 @@ While our present problems of signal loss or slow speeds at peak times may not b
 \subsection{The Definition of 5G} \label{subsec:def5g}
 Presently there is no fixed definition for 5G, and the standards for 5G are continuously being reviewed. However, the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have defined three core features of 5G \cite{ieee5g}, outlined below. 
 
-%\textbf{1) Massive Connectivity}.
+%\textsc{1) Massive Connectivity: }
 \subsubsection{Massive Connectivity}
 The \textit{Internet of Things} era is defined as the point in time where the number of physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
 
-%\textbf{2) Capacity Enhancement}.
+%\textsc{2) Capacity Enhancement: }
 \subsubsection{Capacity Enhancement}
 As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
 
-%\textbf{3) Ultra High Reliability and Low Latency}.
+%\textsc{3) Ultra High Reliability and Low Latency: }
 \subsubsection{Ultra High Reliability and Low Latency}
 Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired, if not necessary.
 
@@ -68,9 +68,9 @@ With three fundamental motivations behind 5G in mind, we must then contemplate t
 \subsection{Millimetre Waves}
 As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the most pressing issues 5G needs to solve is an insufficient capacity in our networks for current forecasts concerning device numbers. Today's radio wave based networks utilise frequencies under 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to capacity problems is to use more of the frequency spectrum - unfortunately, this is much more complicated than simply allowing waves to travel over a wider variety of frequencies. 
 
-Through the use of millimetre waves \textit{(mmWaves)}, broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. Millimetre waves are an attractive technology from the perspective of transfer speed, and also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission.
+Through the use of millimetre waves \textit{(mmWaves)}, broadcast between 30GHz and 300GHz, a wide area of the spectrum previously unused for communications would be made available. Millimetre waves are an attractive technology from the perspective of transfer speed, and also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission.
 
-According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard \textit{802.11ad} has already been developed for this band. Fortunately, there is still up to 16GHz of space available in the remaining suggested bands. 
+According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20GHz and 90GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86 GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard \textit{802.11ad} has already been developed for this band. Fortunately, there is still up to 16GHz of space available in the remaining suggested bands. 
 
 These suggested bands would improve network capacity, but also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}, equivalent to 1.25 gigabytes), with latencies of less than 1 millisecond \cite{mmwave}. 
 
@@ -78,11 +78,11 @@ These suggested bands would improve network capacity, but also allow for transfe
 
 While millimetre waves sound promising with respect to both capacity and speed, they are not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost behind natural and man-made objects such as trees and buildings, meaning they have previously been dismissed for mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
 
-By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost behind obstacles. In one case, when small cells were placed in an outdoor environment at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28 and 38GHz bands showed weakening between 0.6 and 0.8 dB/km \cite{mmwave}. The same small cells tested in more severe conditions like particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 dB/km. 
+By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost behind obstacles. In one case, when small cells were placed in an outdoor environment at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28GHz and 38GHz bands showed weakening between 0.6 and 0.8 dB/km \cite{mmwave}. The same small cells tested in more severe conditions like particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 dB/km. 
 
 While these results are promising for millimetre waves and small cells, it is arguable that the largest use of 5G networks will be in indoor environments such as offices and schools, where signals will have to travel through walls. 
 
-Researchers at New York University (NYU) Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass, and elevator doors. Initial tests over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28 and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28 and 73GHz bands. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
+Researchers at New York University (NYU) Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass, and elevator doors. Initial tests over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28GHz and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28GHz and 73GHz bands. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
 
 \subsection{Massive MIMO: Multiple Input Multiple Output}
 The concept of MIMO or \textit{multiple input, multiple output} has existed for many years, and is now a routine component in 4G LTE base stations. These antennae, usually no more than 10 per station \cite{mimo}, handle all incoming and outgoing data. This relatively small number of antennae have to deal with an increased number of users at peak times, highlighting crowded bandwidth problems.
@@ -96,7 +96,7 @@ Our current stations send signals in multiple directions, rather than on a direc
 
 Spatial multiplexing involves splitting outgoing data into packets to be transferred simultaneously, over the same frequency, with the target antenna reassembling the packets upon receipt \cite{beam_sm}. Spatial multiplexing also allows for packets to use walls and other obstacles almost like reflectors to bounce off. This technique would lead to a more efficient data transfer system, one better capable of handling increasing amounts of traffic on the network.
 
-To further improve data transfer methods, beamforming would allow antennae to focus data in a directed way, almost like a beam. As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. Path loss exponents for 28 and 73GHz bands, initially reading 11.6 and 15.6 decibels respectively, were with beamforming reduced to 10.8 and 11.8 decibels, showing great improvement particularly in the 73GHz band.
+To further improve data transfer methods, beamforming would allow antennae to focus data in a directed way, almost like a beam. As discussed in section \textit{\ref{subsec:smallcells}}, researchers at NYU used beamforming to improve tests on indoor use of millimetre waves and small cells. Path loss exponents for 28GHz and 73GHz bands, initially reading 11.6 and 15.6 decibels respectively, were with beamforming reduced to 10.8 and 11.8 decibels, showing great improvement particularly in the 73GHz band.
 
 As Sun \textit{et al} outlines in \cite{beam_sm}, these two concepts are highly appealing considering antennae could be steered in any direction and could bounce data off buildings, leading to very little loss of signal and reduced interference.
 \bigskip
@@ -109,9 +109,14 @@ Having pondered the issues of current 4G networks and possible solutions using n
 \subsection{Problems Facing 5G}
 Complications and questions arise with each major development in any area of technology. Some of the issues at the forefront of disruptions to 5G development include health concerns, and building the required infrastructure.
 
-\subsubsection{Health}As any technology advances and incorporates new ideas, concerns regarding various health risks also develop. Micro-waves, broadcast in the same spectrum range as millimetre waves, have long been the subject of public suspicions. The World Health Organisation concluded in \cite{health} that, on the basis of scientific research, the only affect radio waves (0-6GHz) have on the human body is a minor increase in body temperature from exposure at very high intensities. While existing research suggests millimetre waves will not affect the body significantly more, the WHO's \textit{International EMF Project} \cite{emfproj} aims to continuously evaluate any risks related to waves broadcast on frequencies up to 300GHz.
 
-\subsubsection{Infrastructure}While 5G technologies will continue to require extensive funding for research and development, the cost of actually implementing the necessary infrastructure, in both rural and urban areas, could be colossal. Of course the requirement of large numbers of small cells entails a large initial cost, but the ongoing cost of maintenance must also be considered. There is also a trade off to be acknowledged in the case of sparsely populated or rural areas - will user uptake be substantial enough to warrant the cost and effort involved in providing access to 5G in these areas? 
+\subsubsection{Health}
+%\textsc{1) Health: }
+As any technology advances and incorporates new ideas, concerns regarding various health risks also develop. Micro-waves, broadcast in the same spectrum range as millimetre waves, have long been the subject of public suspicions. The World Health Organisation \textit{(WHO)} concluded in \cite{health} that, on the basis of scientific research, the only affect radio waves (0-6GHz) have on the human body is a minor increase in body temperature from exposure at very high intensities. While existing research suggests millimetre waves will not affect the body significantly more, the WHO's \textit{International EMF Project} \cite{emfproj} aims to continuously evaluate any risks related to waves broadcast on frequencies up to 300GHz.
+
+%\textsc{2) Infrastructure: }
+\subsubsection{Infrastructure}
+While 5G technologies will continue to require extensive funding for research and development, the cost of actually implementing the necessary infrastructure, in both rural and urban areas, could be colossal. Of course the requirement of large numbers of small cells entails a large initial cost, but the ongoing cost of maintenance must also be considered. There is also a trade off to be acknowledged in the case of sparsely populated or rural areas - will user uptake be substantial enough to warrant the cost and effort involved in providing access to 5G in these areas? 
 
 \subsection{Possible Use Cases}
 One cannot ignore the fact that there are considerable obstacles, only some of which are mentioned in the previous section, for 5G to overcome. However, one must also recognise the likely positive effects introducing 5G networks on a global scale would have.
