--- a/main.tex
+++ b/main.tex
@@ -138,5 +138,7 @@ There are endless possible use cases for 5G systems besides these examples, such
 \section{Conclusion}
 The way we communicate and incorporate technology into both our personal lives and wider society is changing greatly with each passing year. Based on current forecasts, our expectations and demands will soon surpass the capabilities of current 4G systems. While the technologies mentioned in this review have shown considerable potential, there is still much research to be carried out before 5G systems can overcome its obstacles, and be considered a global solution to the problems we face. The possibilities regarding applications of 5G networks are alone a great motivation to see widespread implementation of 5G systems. These possibilities, coupled with the need to improve on 4G systems and our ever-increasing demand for higher communication speeds and more reliable signals, will be the driving forces behind the advancements to come. It is human nature to seek more efficient, faster solutions in any aspect of life, and the lead up to this new era of mobile communications can undoubtedly be considered a truly exciting time in the industry.
 
+\bigskip
+
 \printbibliography
 \end{document}
