--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \maketitle
 
 \begin{abstract}
-Mobile communications can today be considered an important, almost essential component of modern life. From the development of smartphones to the arrival of the \textit{Internet of Things}, recent advancements in technology have led to increased demands on mobile communications networks, leaving current fourth generation systems struggling to keep up. Acknowledging issues faced by current networks, we consider some of the proposed individual technologies for the forthcoming fifth generation of mobile communications standards and their respective advantages and disadvantages. Also examined are the obstacles, both technical and non-technical, that may disrupt the implementation of fifth generation networks. While these issues may be considered discouraging, some of the many positive, achievable use cases for fifth generation systems are also recognised. 
+Mobile communications can today be considered an important, almost essential component of modern life. From the development of smartphones to the arrival of the \textit{Internet of Things}, recent advancements in technology have led to increased demands on mobile communications networks, leaving current fourth generation systems struggling to keep up. Acknowledging issues faced by current networks, we consider some of the proposed individual technologies for the forthcoming fifth generation of mobile communications standards, including their respective advantages and disadvantages. Also examined are the obstacles, both technical and non-technical, that may disrupt the implementation of fifth generation networks. While these issues may be considered discouraging, some of the many positive, achievable use cases for fifth generation systems are also recognised. 
 
 \end{abstract}
 \begin{IEEEkeywords}
@@ -29,7 +29,7 @@ Mobile communications can today be considered an important, almost essential com
 \section{Introduction}
 In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its relevant technologies. From the introduction of first generation wireless cellular technology \textit{(1G)} in the 1980s, right up to the fourth generation \textit{(4G)} available in most countries around the world today, we have seen extensive growth and improvement in services.
 
-Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews \textit{et al} claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 18 billion devices connected to the internet in 2017 \cite{ericssondev} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
+Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected to each other, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews \textit{et al} claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 18 billion devices connected to the internet in 2017 \cite{ericssondev} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
 
 In this literature review, we will first discuss briefly the history of mobile communications as well as current technologies in the fourth generation of mobile communications standards, progressing to proposed key technologies for the fifth generation \textit{(5G)} of standards, problems to overcome, and possible applications of 5G.
 
@@ -41,7 +41,7 @@ As the World Wide Web became more accessible to the average person in the late 1
 \subsection{Fourth Generation and Current Limitations} \label{subsec:4g}
 As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, 4G standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
 
-According to Gartner \cite{gartner4g}, 4G provides users with peak speeds of 100Mbps \textit{(megabits-per-second)}. While these speeds are attractive on paper, the actual speed a user may experience can be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses the same relatively small band of spectrum. Estimates of total number of connected devices (such as landlines, mobile phones, televisions and kettles) are currently at 18 billion \cite{ericssondev}, with this number increasing rapidly. This implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
+According to Gartner \cite{gartner4g}, 4G provides users with peak speeds of 100Mbps \textit{(megabits-per-second)}. While these speeds are attractive on paper, the actual speed a user may experience can be significantly less, depending on a variety of different factors such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses the same relatively small band of spectrum. Estimates of total number of connected devices (such as landlines, mobile phones, televisions and kettles) are currently at 18 billion \cite{ericssondev}, with this number increasing rapidly. This implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
 
 \section{Fifth Generation}
 While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies. 5G will bring more efficient communication methods, thus allowing for faster movement of data coupled with increased reliability.
@@ -55,11 +55,11 @@ The \textit{Internet of Things} era is defined as the point in time where the nu
 
 %\textsc{2) Capacity Enhancement: }
 \subsubsection{Capacity Enhancement}
-As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increased capacity must therefore be a core component of any future generation of mobile communications.
 
 %\textsc{3) Ultra High Reliability and Low Latency: }
 \subsubsection{Ultra High Reliability and Low Latency}
-Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired, if not necessary.
+Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired and sometimes even necessary.
 
 \section{Proposed Technologies}
 
@@ -76,13 +76,13 @@ These suggested bands would improve network capacity, but also allow for transfe
 
 \subsection{Small Cells}\label{subsec:smallcells}
 
-While millimetre waves sound promising with respect to both capacity and speed, they are not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost behind natural and man-made objects such as trees and buildings, meaning they have previously been dismissed for mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
+While millimetre waves sound promising with respect to both capacity and speed, they are not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signals can also be lost behind natural and man-made objects such as trees and buildings and consequently, millimetre waves have previously been dismissed for mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
 
 By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost behind obstacles. In one case, when small cells were placed in an outdoor environment at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28GHz and 38GHz bands showed weakening between 0.6 and 0.8 dB/km \cite{mmwave}. The same small cells tested in more severe conditions like particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 dB/km. 
 
 While these results are promising for millimetre waves and small cells, it is arguable that the largest use of 5G networks will be in indoor environments such as offices and schools, where signals will have to travel through walls. 
 
-Researchers at New York University (NYU) Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass, and elevator doors. Initial tests over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28GHz and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28GHz and 73GHz bands. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
+Researchers at New York University \textit{(NYU)} Polytechnic School of Engineering conducted tests on millimetre wave and small cell technologies in a typical office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass, and elevator doors. Initial tests over distances ranging from 3.9 to 45.9 metres showed path loss exponents \textit{(PLE; a reduction in strength)} in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28GHz and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28GHz and 73GHz bands. Deng \textit{et al} improved on these results through the implementation of beamforming, to be discussed in greater detail in section \textit{\ref{subsec:beamspac}}.
 
 \subsection{Massive MIMO: Multiple Input Multiple Output}
 The concept of MIMO or \textit{multiple input, multiple output} has existed for many years, and is now a routine component in 4G LTE base stations. These antennae, usually no more than 10 per station \cite{mimo}, handle all incoming and outgoing data. This relatively small number of antennae have to deal with an increased number of users at peak times, highlighting crowded bandwidth problems.
@@ -136,8 +136,9 @@ Remote surgery or examination in medicine would reap the benefits of 5G, seeing 
 There are endless possible use cases for 5G systems besides these examples, such as autonomous transport, smart cities, and emergency service communications \cite{wp5g}. Only large scale deployment of 5G networks will reveal all possible applications.
 
 \section{Conclusion}
-The way we communicate and incorporate technology into both our personal lives and wider society is changing greatly with each passing year. Based on current forecasts, our expectations and demands will soon surpass the capabilities of current 4G systems. While the technologies mentioned in this review have shown considerable potential, there is still much research to be carried out before 5G systems can overcome its obstacles, and be considered a global solution to the problems we face. The possibilities regarding applications of 5G networks are alone a great motivation to see widespread implementation of 5G systems. These possibilities, coupled with the need to improve on 4G systems and our ever-increasing demand for higher communication speeds and more reliable signals, will be the driving forces behind the advancements to come. It is human nature to seek more efficient, faster solutions in any aspect of life, and the lead up to this new era of mobile communications can undoubtedly be considered a truly exciting time in the industry.
+The way we communicate and incorporate technology into both our personal lives and wider society is changing greatly with each passing year. Based on current forecasts, our expectations and demands will soon surpass the capabilities of current 4G systems. While the technologies mentioned in this review have shown considerable potential, there is still much research to be carried out before 5G systems can overcome its obstacles, and be considered a global solution to the problems we face. The possibilities regarding applications of 5G networks are alone a great motivation to see widespread implementation of 5G systems. These possibilities, coupled with the need to improve on 4G systems and our ever-increasing demand for higher communication speeds and more reliable signals, will be the driving forces behind the advancements to come. The lead up to this new era of mobile communications can undoubtedly be considered a truly exciting time in the industry.
 
+\bigskip
 \bigskip
 
 \printbibliography
